--- a/app/src/main/res/layout/activity_repartidor_detalle_mapa_pedido.xml
+++ b/app/src/main/res/layout/activity_repartidor_detalle_mapa_pedido.xml
@@ -125,7 +125,7 @@
                 android:textSize="18sp"
                 app:iconSize="25sp"
                 app:icon="@drawable/intento"
-                android:onClick="verRepartidorRechazarTomarPedido"
+                android:onClick="aceptacionRepartidor2"
                 />
 
 
