--- a/app/src/main/res/layout/activity_repartidor_historial.xml
+++ b/app/src/main/res/layout/activity_repartidor_historial.xml
@@ -116,287 +116,13 @@
 
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/lista"
                 android:layout_width="match_parent"
                 android:layout_height="700sp"
                 android:orientation="vertical"
                 tools:layout_editor_absoluteX="27dp"
                 tools:layout_editor_absoluteY="111dp">
 
-                <LinearLayout
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:layout_width="380sp"
-                    android:layout_marginTop="10sp"
-                    android:background="@drawable/card_repartidor"
-                    android:layout_height="100sp">
-
-                    <LinearLayout
-                        android:layout_width="90sp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="75sp"
-                            android:layout_height="75sp"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="10sp"
-                            android:scaleType="centerCrop"
-                            android:layout_marginTop="13sp"
-                            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-                            app:srcCompat="@drawable/bembos_logo"/>
-
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="150sp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_marginTop="6sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#32"
-                            android:textStyle="bold"
-                            android:textSize="18sp"
-                            android:textColor="@color/md_theme_primary"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Estado: En camino"
-                            android:textStyle="bold"
-                            android:textSize="13sp"
-                            android:textColor="@color/black"
-                            />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Fecha: 12/12/2024"
-                            android:textStyle="bold"
-                            android:textSize="13sp"
-                            android:textColor="@color/black"
-                            />
-                        <TextView
-                            android:layout_marginTop="1.5sp"
-                            android:layout_height="wrap_content"
-                            android:layout_width="120sp"
-                            android:text="Costo delivery:S/.12.00"
-                            android:textStyle="bold"
-                            android:textSize="11.5sp"
-                            android:textColor="@color/md_theme_errorContainer_mediumContrast"
-                            />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_marginStart="5sp"
-                        android:layout_width="70sp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                            style="?attr/floatingActionButtonSmallStyle"
-                            android:layout_marginTop="18sp"
-                            android:layout_marginStart="10sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:backgroundTint="@color/md_theme_secondary"
-                            android:contentDescription="Mapa"
-                            android:onClick="verRepartidorVerMapaPedidoSinBoton"
-                            app:tint="@color/white"
-                            app:srcCompat="@drawable/mapa_icon_icon" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_marginStart="-15sp"
-                        android:layout_width="70sp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                            style="?attr/floatingActionButtonSmallStyle"
-                            android:layout_marginTop="18sp"
-                            android:layout_marginStart="10sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:backgroundTint="@color/md_theme_secondary"
-                            android:contentDescription="Detalles"
-                            app:tint="@color/white"
-                            android:onClick="verDetalleCompraDeliverySinBoton"
-                            app:srcCompat="@drawable/details" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:layout_width="380sp"
-                    android:layout_marginTop="10sp"
-                    android:background="@drawable/card_repartidor"
-                    android:layout_height="100sp">
-
-                    <LinearLayout
-                        android:layout_width="90sp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="75sp"
-                            android:layout_height="75sp"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="10sp"
-                            android:scaleType="centerCrop"
-                            android:layout_marginTop="13sp"
-                            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-                            app:srcCompat="@drawable/bembos_logo"/>
-
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="130sp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_marginTop="6sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#33"
-                            android:textStyle="bold"
-                            android:textSize="18sp"
-                            android:textColor="@color/md_theme_primary"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Estado: Entregado"
-                            android:textStyle="bold"
-                            android:textSize="13sp"
-                            android:textColor="@color/black"
-                            />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Fecha: 12/12/2024"
-                            android:textStyle="bold"
-                            android:textSize="13sp"
-                            android:textColor="@color/black"
-                            />
-                        <TextView
-                            android:layout_marginTop="1.5sp"
-                            android:layout_height="wrap_content"
-                            android:layout_width="120sp"
-                            android:text="Costo delivery:S/.12.00"
-                            android:textStyle="bold"
-                            android:textSize="11.5sp"
-                            android:textColor="@color/md_theme_errorContainer_mediumContrast"
-                            />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_marginStart="55sp"
-                        android:layout_width="70sp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                            style="?attr/floatingActionButtonSmallStyle"
-                            android:layout_marginTop="18sp"
-                            android:layout_marginStart="10sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:backgroundTint="@color/md_theme_secondary"
-                            android:contentDescription="Detalles"
-                            app:tint="@color/white"
-                            android:onClick="verDetalleCompraDeliverySinBoton"
-                            app:srcCompat="@drawable/details" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:layout_width="380sp"
-                    android:layout_marginTop="10sp"
-                    android:background="@drawable/card_repartidor"
-                    android:layout_height="100sp">
-
-                    <LinearLayout
-                        android:layout_width="90sp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="75sp"
-                            android:layout_height="75sp"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginStart="10sp"
-                            android:scaleType="centerCrop"
-                            android:layout_marginTop="13sp"
-                            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-                            app:srcCompat="@drawable/bembos_logo"/>
-
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="130sp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_marginTop="6sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="#33"
-                            android:textStyle="bold"
-                            android:textSize="18sp"
-                            android:textColor="@color/md_theme_primary"
-                            />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Estado: Entregado"
-                            android:textStyle="bold"
-                            android:textSize="13sp"
-                            android:textColor="@color/black"
-                            />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Fecha: 12/12/2024"
-                            android:textStyle="bold"
-                            android:textSize="13sp"
-                            android:textColor="@color/black"
-                            />
-                        <TextView
-                            android:layout_marginTop="1.5sp"
-                            android:layout_height="wrap_content"
-                            android:layout_width="120sp"
-                            android:text="Costo delivery:S/.12.00"
-                            android:textStyle="bold"
-                            android:textSize="11.5sp"
-                            android:textColor="@color/md_theme_errorContainer_mediumContrast"
-                            />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_marginStart="55sp"
-                        android:layout_width="70sp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-                        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                            style="?attr/floatingActionButtonSmallStyle"
-                            android:layout_marginTop="18sp"
-                            android:layout_marginStart="10sp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:backgroundTint="@color/md_theme_secondary"
-                            android:contentDescription="Detalles"
-                            app:tint="@color/white"
-                            android:onClick="verDetalleCompraDeliverySinBoton"
-                            app:srcCompat="@drawable/details" />
-                    </LinearLayout>
-
-                </LinearLayout>
 
             </androidx.recyclerview.widget.RecyclerView>
 
