--- a/app/src/main/res/layout/irv_repartidor_historial_pedidos.xml
+++ b/app/src/main/res/layout/irv_repartidor_historial_pedidos.xml
@@ -84,6 +84,7 @@
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 style="?attr/floatingActionButtonSmallStyle"
+                android:id="@+id/id_mapa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10sp"
@@ -102,6 +103,7 @@
             android:orientation="vertical">
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/olaaaaa"
                 style="?attr/floatingActionButtonSmallStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
