--- a/app/src/main/res/layout/activity_repartidor_detalle_compra_delivery.xml
+++ b/app/src/main/res/layout/activity_repartidor_detalle_compra_delivery.xml
@@ -56,6 +56,7 @@
                 android:textStyle="bold"/>
 
             <Button
+                android:id="@+id/btn_rechazar"
                 style="@style/Widget.Material3.Button.ElevatedButton"
                 android:layout_width="155sp"
                 android:layout_height="wrap_content"
