--- a/app/src/main/res/layout/activity_repartidor_detalle_mapa_pedido.xml
+++ b/app/src/main/res/layout/activity_repartidor_detalle_mapa_pedido.xml
@@ -115,6 +115,7 @@
             <Button
                 style="@style/Widget.Material3.Button.ElevatedButton"
                 android:layout_width="155sp"
+                android:id="@+id/btn_aceptar"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="-10sp"
