--- a/app/src/main/res/layout/activity_administrador_detalle_compra.xml
+++ b/app/src/main/res/layout/activity_administrador_detalle_compra.xml
@@ -112,6 +112,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerDetalleAdmin"
             android:layout_width="match_parent"
             android:layout_height="361dp" />
 
