--- a/app/src/main/res/layout/irv_administrador_reporte_cliente.xml
+++ b/app/src/main/res/layout/irv_administrador_reporte_cliente.xml
@@ -104,7 +104,7 @@
             android:orientation="vertical">
 
             <com.google.android.material.button.MaterialButton
-                android:layout_width="60sp"
+                android:layout_width="wrap_content"
                 android:layout_height="50sp"
                 android:layout_marginStart="5sp"
                 android:layout_marginTop="15sp"
