--- a/app/src/main/res/layout/activity_administrador_reporte_comida.xml
+++ b/app/src/main/res/layout/activity_administrador_reporte_comida.xml
@@ -146,6 +146,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerReporteComida"
         android:layout_width="match_parent"
         android:layout_height="409dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
