--- a/app/src/main/res/layout/activity_administrador_vista_inicial.xml
+++ b/app/src/main/res/layout/activity_administrador_vista_inicial.xml
@@ -160,6 +160,7 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerRestauranteAdmin"
             android:layout_width="match_parent"
             android:layout_height="336dp" />
 
