--- a/app/src/main/res/layout/irv_notificaciones.xml
+++ b/app/src/main/res/layout/irv_notificaciones.xml
@@ -9,6 +9,8 @@
         style="?attr/materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
