--- a/app/src/main/res/layout/activity_login_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_login_inicio_sesion.xml
@@ -67,6 +67,7 @@
                 app:startIconDrawable="@drawable/mail_24px">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLength="20" />
@@ -83,6 +84,7 @@
                 app:startIconDrawable="@drawable/lock_24px">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
