--- a/app/src/main/res/layout/activity_administrador_vista_inicial.xml
+++ b/app/src/main/res/layout/activity_administrador_vista_inicial.xml
@@ -177,7 +177,7 @@
             android:layout_height="336dp" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
+            android:id="@+id/bottom_navigation_admin"
             android:layout_width="410sp"
             android:layout_height="wrap_content"
             android:layout_marginTop="0sp"
